# ticketweb-rt-interface

./: setup.cfg
frontend_module/: package.json  rt_network.js
server_module/: setup.cfg
server_module/src/ticketweb_rt_interface/: handlers.py
