[metadata]
name = ticketweb-rt-interface-WALTONM
version = 0.0.1
author = Michael Walton
author_email = waltonm@queensu.ca
description = Python RT interface for use by application server modules
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6


install_requires =
    cryptography >= 37.0
    falcon >= 3.1
    gunicorn >= 20.1
    PyJWT >= 2.3
    python-ldap >= 3.4
    requests >= 2.27
    requests-toolbelt >= 0.9.1

[options.packages.find]
where = src
